fix: alignment for empty table cells

--- a/src/components/ColorTable/index.scss
+++ b/src/components/ColorTable/index.scss
@@ -21,3 +21,11 @@
     }
   }
 }
+
+.color-table {
+  td {
+    &[data-text-align="center"] {
+      text-align: center;
+    }
+  }
+}
